--- a/DoubleDeckerBar/MainWindow.xaml
+++ b/DoubleDeckerBar/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:DoubleDeckerBar"
         xmlns:apictrl="clr-namespace:Start9.Api.Controls;assembly=Start9.Api"
         mc:Ignorable="d"
-        Title="DoubleDeckerBar" Width="1024" Height="100" WindowStyle="None" ResizeMode="NoResize" AllowsTransparency="True" Background="Transparent" FontFamily="Segoe UI" Topmost="True" ShowInTaskbar="False" ShowActivated="False">
+        Title="DoubleDeckerBar" Width="1024" Height="100" WindowStyle="None" ResizeMode="NoResize" AllowsTransparency="True" Background="Transparent" FontFamily="Segoe UI" Topmost="True" ShowInTaskbar="False" Focusable="False" ShowActivated="False">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -30,7 +30,7 @@
                     </apictrl:TouchableContextMenu>
                 </Button.ContextMenu>
             </Button>
-            <WrapPanel x:Name="QuickLaunch" Orientation="Vertical" Margin="5,7,5,0"/>
+            <WrapPanel x:Name="QuickLaunch" Orientation="Vertical" Margin="3,0"/>
             <!--Canvas Width="16" Height="16" Background="Red" Margin="0,0,7,7"/>
                 <Canvas Width="16" Height="16" Background="Blue" Margin="0,0,7,7"/>
                 <Canvas Width="16" Height="16" Background="Red" Margin="0,0,7,7"/>
@@ -38,8 +38,8 @@
                 <Canvas Width="16" Height="16" Background="Red" Margin="0,0,7,7"/>
                 <Canvas Width="16" Height="16" Background="Blue" Margin="0,0,7,7"/>
             </WrapPanel-->
-            <StackPanel Width="56" DockPanel.Dock="Right" Orientation="Vertical" VerticalAlignment="Center" Background="{DynamicResource MetalBrush}">
-                <Grid Width="36" Height="36">
+            <StackPanel x:Name="ClockStackPanel" Width="56" DockPanel.Dock="Right" Orientation="Vertical" VerticalAlignment="Center" Background="{DynamicResource MetalBrush}">
+                <Grid Width="36" Height="36" IsHitTestVisible="False">
                     <Ellipse Fill="#FF666666" Stroke="Black" StrokeThickness="1"/>
                     <Ellipse Fill="#FF171717" StrokeThickness="1" Margin="2">
                         <Ellipse.Stroke>
